ESAPI 2.0 rc 3 merge - clean merges